First tool examples

--- a/5_agents_example.ipynb
+++ b/5_agents_example.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "bd9332a3",
    "metadata": {},
    "outputs": [],
@@ -42,9 +42,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58ddc5ac",
+   "metadata": {},
+   "source": [
+    "We will directly use the CodeAgent class from `smolagents`.\n",
+    "\n",
+    "**The Tools**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ecd67819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def my_custom_tool(arg1: str, arg2: int) -> str:\n",
+    "    \"\"\"A tools that does nothing yet\n",
+    "    Args:\n",
+    "        arg1: the first argument\n",
+    "        arg2: the second argument\n",
+    "    \"\"\"\n",
+    "    return \"What magic will you build?\"\n",
+    "\n",
+    "@tool\n",
+    "def get_current_time_in_timezone(timezone: str) -> str:\n",
+    "    \"\"\"A tool that fetches the current local time in a specified timezone.\n",
+    "    Args:\n",
+    "        timezone: A string representing a valid timezone (e.g., 'America/New_York)\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Create timezone object\n",
+    "        tz = pytz.timezone(timezone)\n",
+    "        # Get current time in that timezone\n",
+    "        local_time = datetime.datetime.now(tz).strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "        return f\"The current local time in {timezone} is: {local_time}\"\n",
+    "    except Exception as e:\n",
+    "        return f\"Error fetching time for timezone '{timezone}': {str(e)}\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ddc5ac",
+   "id": "170d75a3",
    "metadata": {},
    "outputs": [],
    "source": []
