--- a/5_agents_example.ipynb
+++ b/5_agents_example.ipynb
@@ -84,9 +84,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "170d75a3",
+   "metadata": {},
+   "source": [
+    "So far we have:\n",
+    "1. A non-working dummy Tool that you can modify to make something useful.\n",
+    "1. An actually working Tool that gets the current time somewhere in the world.\n",
+    "\n",
+    "To define your tool it's important to:\n",
+    "1. Provide input and output types for your function\n",
+    "1. A well formatted docstring. `smolagents` is expecting all the arguments to have a textual description in the docstring.\n",
+    "\n",
+    "## The Agent\n",
+    "\n",
+    "It uses Qwen/Qwen2.5-Coder-32B-Instruct as the LLM engine. This is a very capable model that we’ll access via the serverless API."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "170d75a3",
+   "id": "687f79d2",
    "metadata": {},
    "outputs": [],
    "source": []
