Prepared prompts for yaml file and troubleshooting (likely) outdated example

--- a/5_agents_example.ipynb
+++ b/5_agents_example.ipynb
@@ -107,7 +107,24 @@
    "id": "687f79d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_answer = FinalAnswerTool()\n",
+    "model = InferenceClientModel(\n",
+    "    max_tokens=2096,\n",
+    "    temperature=0.5,\n",
+    "    model_id='Qwen/Qwen2.5-Coder-32B-Instruct',\n",
+    "    custom_role_conversions=None,\n",
+    ")\n",
+    "\n",
+    "with open (\"prompts.yaml\", \"r\") as stream:\n",
+    "    prompt_templates = yaml.safe_load(stream)\n",
+    "\n",
+    "agent = CodeAgent(\n",
+    "    model=model,\n",
+    "    tools=[final_answer], # Add your tools here (don't remove final_answer)\n",
+    "    \n",
+    ")"
+   ]
   }
  ],
  "metadata": {
