Resuming agent template elsewhere

--- a/5_agents_example.ipynb
+++ b/5_agents_example.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "bd9332a3",
    "metadata": {},
    "outputs": [],
@@ -36,6 +36,7 @@
     "import requests\n",
     "import pytz\n",
     "import yaml\n",
+    "import gradio\n",
     "\n",
     "load_dotenv()\n",
     "token = os.getenv(\"HF_INF_TOKEN\")"
@@ -53,25 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "ecd67819",
    "metadata": {},
    "outputs": [],
    "source": [
     "@tool\n",
-    "def my_custom_tool(arg1: str, arg2: int) -> str:\n",
-    "    \"\"\"A tools that does nothing yet\n",
+    "def my_custom_tool(arg1:str, arg2:int)-> str: # it's important to specify the return type\n",
+    "    # Keep this format for the tool description / args description but feel free to modify the tool\n",
+    "    \"\"\"A tool that does nothing yet \n",
     "    Args:\n",
     "        arg1: the first argument\n",
     "        arg2: the second argument\n",
     "    \"\"\"\n",
-    "    return \"What magic will you build?\"\n",
+    "    return \"What magic will you build ?\"\n",
     "\n",
     "@tool\n",
     "def get_current_time_in_timezone(timezone: str) -> str:\n",
     "    \"\"\"A tool that fetches the current local time in a specified timezone.\n",
     "    Args:\n",
-    "        timezone: A string representing a valid timezone (e.g., 'America/New_York)\n",
+    "        timezone: A string representing a valid timezone (e.g., 'America/New_York').\n",
     "    \"\"\"\n",
     "    try:\n",
     "        # Create timezone object\n",
@@ -103,10 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "687f79d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Some prompt templates are missing from your custom `prompt_templates`: {'final_answer'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m     prompt_templates = yaml.safe_load(stream)\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# We're creating our CodeAgent\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m agent = \u001b[43mCodeAgent\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtools\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[43mfinal_answer\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# add your tools here (don't remove final_answer)\u001b[39;49;00m\n\u001b[32m     16\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmax_steps\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[43m    \u001b[49m\u001b[43mverbosity_level\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#grammar=None, I think the example is outdated. Says \"grammer is an unecpected argument\". Probably can fix with the full example\u001b[39;49;00m\n\u001b[32m     19\u001b[39m \u001b[43m    \u001b[49m\u001b[43mplanning_interval\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m     20\u001b[39m \u001b[43m    \u001b[49m\u001b[43mname\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdescription\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m     22\u001b[39m \u001b[43m    \u001b[49m\u001b[43mprompt_templates\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprompt_templates\u001b[49m\n\u001b[32m     23\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     25\u001b[39m GradioUI(agent).launch()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/hugging-face-notes/hugging-env/lib/python3.13/site-packages/smolagents/agents.py:1542\u001b[39m, in \u001b[36mCodeAgent.__init__\u001b[39m\u001b[34m(self, tools, model, prompt_templates, additional_authorized_imports, planning_interval, executor_type, executor_kwargs, max_print_outputs_length, stream_outputs, use_structured_outputs_internally, code_block_tags, **kwargs)\u001b[39m\n\u001b[32m   1533\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mOnly \u001b[39m\u001b[33m'\u001b[39m\u001b[33mmarkdown\u001b[39m\u001b[33m'\u001b[39m\u001b[33m is supported for a string argument to `code_block_tags`.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   1534\u001b[39m \u001b[38;5;28mself\u001b[39m.code_block_tags = (\n\u001b[32m   1535\u001b[39m     code_block_tags\n\u001b[32m   1536\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(code_block_tags, \u001b[38;5;28mtuple\u001b[39m)\n\u001b[32m   (...)\u001b[39m\u001b[32m   1539\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m (\u001b[33m\"\u001b[39m\u001b[33m<code>\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m</code>\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   1540\u001b[39m )\n\u001b[32m-> \u001b[39m\u001b[32m1542\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[32m   1543\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtools\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtools\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1544\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1545\u001b[39m \u001b[43m    \u001b[49m\u001b[43mprompt_templates\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprompt_templates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1546\u001b[39m \u001b[43m    \u001b[49m\u001b[43mplanning_interval\u001b[49m\u001b[43m=\u001b[49m\u001b[43mplanning_interval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1547\u001b[39m \u001b[43m    \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1548\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1549\u001b[39m \u001b[38;5;28mself\u001b[39m.stream_outputs = stream_outputs\n\u001b[32m   1550\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.stream_outputs \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m.model, \u001b[33m\"\u001b[39m\u001b[33mgenerate_stream\u001b[39m\u001b[33m\"\u001b[39m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/hugging-face-notes/hugging-env/lib/python3.13/site-packages/smolagents/agents.py:316\u001b[39m, in \u001b[36mMultiStepAgent.__init__\u001b[39m\u001b[34m(self, tools, model, prompt_templates, instructions, max_steps, add_base_tools, verbosity_level, managed_agents, step_callbacks, planning_interval, name, description, provide_run_summary, final_answer_checks, return_full_result, logger)\u001b[39m\n\u001b[32m    314\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m prompt_templates \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    315\u001b[39m     missing_keys = \u001b[38;5;28mset\u001b[39m(EMPTY_PROMPT_TEMPLATES.keys()) - \u001b[38;5;28mset\u001b[39m(prompt_templates.keys())\n\u001b[32m--> \u001b[39m\u001b[32m316\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m missing_keys, (\n\u001b[32m    317\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSome prompt templates are missing from your custom `prompt_templates`: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmissing_keys\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    318\u001b[39m     )\n\u001b[32m    319\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m EMPTY_PROMPT_TEMPLATES.items():\n\u001b[32m    320\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, \u001b[38;5;28mdict\u001b[39m):\n",
+      "\u001b[31mAssertionError\u001b[39m: Some prompt templates are missing from your custom `prompt_templates`: {'final_answer'}"
+     ]
+    }
+   ],
    "source": [
     "final_answer = FinalAnswerTool()\n",
     "model = InferenceClientModel(\n",
@@ -116,14 +132,31 @@
     "    custom_role_conversions=None,\n",
     ")\n",
     "\n",
-    "with open (\"prompts.yaml\", \"r\") as stream:\n",
+    "with open(\"prompts.yaml\", 'r') as stream:\n",
     "    prompt_templates = yaml.safe_load(stream)\n",
-    "\n",
+    "    \n",
+    "# We're creating our CodeAgent\n",
     "agent = CodeAgent(\n",
     "    model=model,\n",
-    "    tools=[final_answer], # Add your tools here (don't remove final_answer)\n",
-    "    \n",
-    ")"
+    "    tools=[final_answer], # add your tools here (don't remove final_answer)\n",
+    "    max_steps=6,\n",
+    "    verbosity_level=1,\n",
+    "    #grammar=None, I think the example is outdated. Says \"grammer is an unecpected argument\". Probably can fix with the full example\n",
+    "    planning_interval=None,\n",
+    "    name=None,\n",
+    "    description=None,\n",
+    "    prompt_templates=prompt_templates\n",
+    ")\n",
+    "\n",
+    "GradioUI(agent).launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bce109d1",
+   "metadata": {},
+   "source": [
+    "Due to issues with the dependencies present in the actual template, I'm stopping here and resuming on the template."
    ]
   }
  ],
